UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Data_Churn__c.field-meta.xml
<CustomField>
    <fullName>Data_Churn__c</fullName>
    <label>Data Churn</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>