UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Data_Fees_included_in_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Data_Fees_included_in_ARPU__c</fullName>
    <label>Data Fees included in ARPU</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>