UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Data_Penetration_Required__c.field-meta.xml
<CustomField>
    <fullName>Data_Penetration_Required__c</fullName>
    <label>Data Penetration Required(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>