UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Date_Audited__c.field-meta.xml
<CustomField>
    <fullName>Date_Audited__c</fullName>
    <label>Date Audited</label>
    <type>Date</type>
</CustomField>