UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Date_of_Execution__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Execution__c</fullName>
    <label>Date of Execution</label>
    <type>Date</type>
</CustomField>