UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Date_of_first_Completed_Task__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_Completed_Task__c</fullName>
    <description>This field is used by process builder to capture the date the Opportunity first has a Status = &quot;Completed&quot; Task.</description>
    <label>Date of first Completed Task</label>
    <type>Date</type>
</CustomField>