UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Days_from_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Close_Date__c</fullName>
    <formula>CloseDate - today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>