UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Decision_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timestamp__c</fullName>
    <label>Decision Timestamp</label>
    <type>Date</type>
</CustomField>