UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Defining_Duration__c.field-meta.xml
<CustomField>
    <fullName>Defining_Duration__c</fullName>
    <label>Defining Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>