UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Defining_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Defining_Timestamp__c</fullName>
    <label>Defining Timestamp</label>
    <type>Date</type>
</CustomField>