UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Delta_MRR__c.field-meta.xml
<CustomField>
    <fullName>Delta_MRR__c</fullName>
    <label>WriteDown MRR</label>
    <summarizedField>OpportunityLineItem.Delta_MRR__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>