UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Demo_Type__c.field-meta.xml
<CustomField>
    <fullName>Demo_Type__c</fullName>
    <label>Demo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Only</fullName>
            </value>
            <value>
                <fullName>TV Only</fullName>
            </value>
            <value>
                <fullName>Both Data and TV</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>