UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is the describe the SEER/SRQ on the Oppt</description>
    <inlineHelpText>In detail please communicate to the best of your ability the scope of work for this opportunity.</inlineHelpText>
    <label>Description for SEER</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>