UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Description_of_customer_needs__c.field-meta.xml
<CustomField>
    <fullName>Description_of_customer_needs__c</fullName>
    <label>Description of customer needs</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>