UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Detail_Lost_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Detail_Lost_Reasons__c</fullName>
    <label>Detail Lost Reasons</label>
    <length>50</length>
    <type>Text</type>
</CustomField>