UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/DGF_Issued__c.field-meta.xml
<CustomField>
    <fullName>DGF_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for admins only to view and is used in the Process Builder - Hide all versionsDGF creation on Oppty process</description>
    <label>DGF Issued</label>
    <type>Checkbox</type>
</CustomField>