UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Does_this_include_Cloud_Managed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Does_this_include_Cloud_Managed_Solution__c</fullName>
    <label>Is this Cloud Solution (IaaS, DRaaS)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>