UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Door_Fees_Gated_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Door_Fees_Gated_Upfront__c</fullName>
    <label>Door Fees - Gated/Upfront</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gated</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>