UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Door_Fees_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Door_Fees_Per_Unit__c</fullName>
    <label>Door Fees (Per Unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>