UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/DPI_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>DPI_Order_Number__c</fullName>
    <label>DPI Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>