UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/DSAT__c.field-meta.xml
<CustomField>
    <fullName>DSAT__c</fullName>
    <label>DSAT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>