UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/DSAT_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Ticket_ID__c</fullName>
    <description>This is the same as DSAT Ticket ID on the SRQ. Direct sales team (Joel McCain)  needed this on the Oppt.</description>
    <inlineHelpText>If you do not have this just enter N/A.</inlineHelpText>
    <label>DSAT Ticket ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>