UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/E_Rate_470__c.field-meta.xml
<CustomField>
    <fullName>E_Rate_470__c</fullName>
    <description>Created for LIsa Barrow on case 00770975 3/2021 TMM</description>
    <inlineHelpText>Populate with the 470 number</inlineHelpText>
    <label>E-Rate 470</label>
    <length>9</length>
    <type>Text</type>
</CustomField>