UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/E_Rate_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>E_Rate_Lost_Reason__c</fullName>
    <label>E-Rate Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installed Base</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product Offering</fullName>
            </value>
            <value>
                <fullName>Promotion/Campaign</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>E-Rate Evaluation</fullName>
                <isActive>false</isActive>
                <label>E-Rate Evaluation</label>
            </value>
            <value>
                <fullName>RFP/No-Go</fullName>
                <isActive>false</isActive>
                <label>RFP/No-Go</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>