UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/E_Rate_Product__c.field-meta.xml
<CustomField>
    <fullName>E_Rate_Product__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>E-Rate Product</label>
    <length>30</length>
    <type>Text</type>
</CustomField>