UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/E_Rate_Support_Specialist__c.field-meta.xml
<CustomField>
    <fullName>E_Rate_Support_Specialist__c</fullName>
    <description>Used by and created for Lisa Barrow case 00757053 3/11/2021</description>
    <label>E-Rate Support Specialist</label>
    <length>30</length>
    <type>Text</type>
</CustomField>