UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Earliest_Build_Year__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Build_Year__c</fullName>
    <label>Earliest Build Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>