UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Email_flag_for_redline__c.field-meta.xml
<CustomField>
    <fullName>Email_flag_for_redline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email flag for redline</label>
    <type>Checkbox</type>
</CustomField>