UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Enterprise_WIFI__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_WIFI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise WIFI</label>
    <type>Checkbox</type>
</CustomField>