UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Est_Frontier_Coverage_of_County__c.field-meta.xml
<CustomField>
    <fullName>Est_Frontier_Coverage_of_County__c</fullName>
    <label>Est. Frontier Coverage of County</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>