UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Ethernet__c.field-meta.xml
<CustomField>
    <fullName>Ethernet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethernet</label>
    <type>Checkbox</type>
</CustomField>