UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Evaluating_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Evaluating_Timestamp__c</fullName>
    <label>Evaluating Timestamp</label>
    <type>Date</type>
</CustomField>