UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Executive_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Executive_Review_Completed_Date__c</fullName>
    <label>Executive Review Completed Date</label>
    <type>Date</type>
</CustomField>