UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Executive_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Executive_Review_Required__c</fullName>
    <label>Executive Review Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>