UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer__c</fullName>
    <description>Created for the E-Rate section for Lisa Barrow case 00810815 07/15/2021</description>
    <label>Existing Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>