UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Expected_Billed_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Billed_Date__c</fullName>
    <label>Expected Billed Date</label>
    <type>Date</type>
</CustomField>