UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Expected_Move_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Move_in_Date__c</fullName>
    <label>OFS Date</label>
    <type>Date</type>
</CustomField>