UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FAW_UCaaS__c.field-meta.xml
<CustomField>
    <fullName>FAW_UCaaS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAW UCaaS</label>
    <type>Checkbox</type>
</CustomField>