UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Fiber_Build_Costs__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Build_Costs__c</fullName>
    <label>Fiber Build Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>