UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Fiber_Distance__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Distance__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>Fiber Distance</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>