UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Fiber_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Qualification__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>Fiber Qualification</label>
    <length>20</length>
    <type>Text</type>
</CustomField>