UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Flat_Rate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Percentage__c</fullName>
    <description>If Flat rete percentage option is selected in  &quot;Revenue Share&quot; field on the opportunity object Flat Rate Percentage should be added here.</description>
    <label>Flat Rate Percentage</label>
    <length>6</length>
    <type>Text</type>
</CustomField>