UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FNSFA__Application_Contact__c.field-meta.xml
<CustomField>
    <fullName>FNSFA__Application_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>