UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FNSFA__Application_Dealer_Id__c.field-meta.xml
<CustomField>
    <fullName>FNSFA__Application_Dealer_Id__c</fullName>
    <label>Application Dealer ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>