UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FNSFA__Application_Id__c.field-meta.xml
<CustomField>
    <fullName>FNSFA__Application_Id__c</fullName>
    <label>Application Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>