UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FNSFA__Application_Status__c.field-meta.xml
<CustomField>
    <fullName>FNSFA__Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>