UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Forecast_Type__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Type__c</fullName>
    <formula>IF(AND(Probability=0)  ,    &quot;Lost&quot;,   
 IF(AND(Probability=1)  ,    &quot;Closed/Won&quot;,   
  IF(AND(  CloseDate&gt;=TODAY(), YEAR(CloseDate)=YEAR(TODAY()), MONTH(CloseDate)=MONTH(TODAY()), Probability&lt;1, Probability&gt;0), &quot;Forecast&quot;,  
   IF(AND( CloseDate&gt;TODAY(), YEAR(CloseDate)&gt;YEAR(TODAY()), Probability&lt;1, Probability&gt;0), &quot;Pipeline&quot;,
    IF(AND( CloseDate&gt;TODAY(), MONTH(CloseDate)&gt;MONTH(TODAY()), Probability&lt;1, Probability&gt;0), &quot;Pipeline&quot;,
  &quot;Open, but Close Date Passed&quot;
     )
    )
   )
  )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Type</label>
    <type>Text</type>
</CustomField>