UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/ForecastCategoryFormula__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategoryFormula__c</fullName>
    <formula>TEXT(ForecastCategoryName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Category</label>
    <type>Text</type>
</CustomField>