UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/From_Stage__c.field-meta.xml
<CustomField>
    <fullName>From_Stage__c</fullName>
    <label>From Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>