UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Frontier_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Account_Executive__c</fullName>
    <description>Frontier Account Executive (text) Field Created by Basel Ryad 05/20/2020</description>
    <label>Frontier Account Executive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>