UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Frontier_Approved_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Approved_Pricing__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>Frontier Approved Pricing</label>
    <length>75</length>
    <type>Text</type>
</CustomField>