UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FRONTIER_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FRONTIER_Expected_Revenue__c</fullName>
    <formula>Opportunity_Amount__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>