UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FSecure_ContractValue__c.field-meta.xml
<CustomField>
    <fullName>FSecure_ContractValue__c</fullName>
    <label>Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>