UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FSecure_EstimatedFTEs__c.field-meta.xml
<CustomField>
    <fullName>FSecure_EstimatedFTEs__c</fullName>
    <label>Estimated FTE&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>