UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FSecure_MonthlyNetAdditions__c.field-meta.xml
<CustomField>
    <fullName>FSecure_MonthlyNetAdditions__c</fullName>
    <label>Monthly Net Additions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>