UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FSecure_ProductContractDuration__c.field-meta.xml
<CustomField>
    <fullName>FSecure_ProductContractDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contract Duration (Products)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>