UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FSecure_TechSupportContractDuration__c.field-meta.xml
<CustomField>
    <fullName>FSecure_TechSupportContractDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contract Duration (Technical Support)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>