UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FTR_Approved_Pricing__c.field-meta.xml
<CustomField>
    <fullName>FTR_Approved_Pricing__c</fullName>
    <description>Created for Lisa Barrow for Erate section 00883680 1/22</description>
    <label>FTR Approved Pricing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>