UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FTR_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>FTR_Contract_Expiration_Date__c</fullName>
    <inlineHelpText>Date the current agreement expires</inlineHelpText>
    <label>FTR Contract Expiration Date</label>
    <type>Date</type>
</CustomField>