UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/ftr_NumberOfQuickQuotes__c.field-meta.xml
<CustomField>
    <fullName>ftr_NumberOfQuickQuotes__c</fullName>
    <label>Number of Quick Quotes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>