UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FTR_Secure_ARPU__c.field-meta.xml
<CustomField>
    <fullName>FTR_Secure_ARPU__c</fullName>
    <label>FTR Secure ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>