UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/FTR_Secure_Churn__c.field-meta.xml
<CustomField>
    <fullName>FTR_Secure_Churn__c</fullName>
    <label>FTR Secure Churn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>