UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Fully_Loaded_Capital_NPV_K__c.field-meta.xml
<CustomField>
    <fullName>Fully_Loaded_Capital_NPV_K__c</fullName>
    <label>Fully Loaded Capital-NPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>