UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Fully_Loaded_Capital_PASS_FAIL__c.field-meta.xml
<CustomField>
    <fullName>Fully_Loaded_Capital_PASS_FAIL__c</fullName>
    <label>Fully Loaded Capital-PASS / FAIL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
            <value>
                <fullName>Exec Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>