UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Fully_Loaded_Capital_Payback__c.field-meta.xml
<CustomField>
    <fullName>Fully_Loaded_Capital_Payback__c</fullName>
    <label>Fully Loaded Capital-Payback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>