UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>Function</label>
    <length>75</length>
    <type>Text</type>
</CustomField>