UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Gated_Door_Fees__c.field-meta.xml
<CustomField>
    <fullName>Gated_Door_Fees__c</fullName>
    <label>Gated Door Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>