UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Grant_Capex_Subsidy_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Grant_Capex_Subsidy_Requirements__c</fullName>
    <description>Grant Capex &amp; Subsidy Requirements for Outbound opportunities.</description>
    <inlineHelpText>Grant Capex &amp; Subsidy Requirements for Outbound opportunities.</inlineHelpText>
    <label>Grant Capex &amp; Subsidy Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>