UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Grant_Eligible_CLs__c.field-meta.xml
<CustomField>
    <fullName>Grant_Eligible_CLs__c</fullName>
    <label>Grant Eligible CLs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>