UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Hospitality__c.field-meta.xml
<CustomField>
    <fullName>Hospitality__c</fullName>
    <inlineHelpText>A commercial establishment offering lodging to travelers and sometimes to permanent residents, and often having restaurants, meeting rooms, stores and etc. For example: Marriott, Hilton, Best Western and etc.</inlineHelpText>
    <label>Hospitality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CPE_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>