UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/HSI_Lines_Removed__c.field-meta.xml
<CustomField>
    <fullName>HSI_Lines_Removed__c</fullName>
    <description>Counts the number of High Speed Interent Lines removed as new data service is provided (enter &quot;0&quot; if none)</description>
    <inlineHelpText>The number of High Speed Interent lines replaced as new data service is provided . (enter &quot;0&quot; if none)</inlineHelpText>
    <label>HSI Lines Removed</label>
    <length>5</length>
    <type>Text</type>
</CustomField>