UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/InFootprint__c.field-meta.xml
<CustomField>
    <fullName>InFootprint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>InFootprint</label>
    <type>Checkbox</type>
</CustomField>