UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>Installation_Type__c</fullName>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brownfield has full/partial FTR service</fullName>
            </value>
            <value>
                <fullName>Brownfield has no FTR service</fullName>
            </value>
            <value>
                <fullName>Greenfield</fullName>
            </value>
            <value>
                <fullName>Expansion - Brownfield has full/partial FTR service</fullName>
            </value>
            <value>
                <fullName>Expansion - Brownfield has no FTR service</fullName>
            </value>
            <value>
                <fullName>Expansion - TBD</fullName>
            </value>
            <value>
                <fullName>Brownfield</fullName>
                <isActive>false</isActive>
                <label>Brownfield</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>