UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Integrated_Sale__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Sale__c</fullName>
    <inlineHelpText>Please qualify if the opportunity includes an engaged integrated partner.</inlineHelpText>
    <label>Integrated Sale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>