UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Interconnect_Lata__c.field-meta.xml
<CustomField>
    <fullName>Interconnect_Lata__c</fullName>
    <label>Interconnect Lata</label>
    <length>3</length>
    <type>Text</type>
</CustomField>