UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Internal_Rate_of_Return_IRR__c.field-meta.xml
<CustomField>
    <fullName>Internal_Rate_of_Return_IRR__c</fullName>
    <description>This field is for the Comm Conn page layout.</description>
    <label>Internal Rate of Return(IRR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>